fixed animation flicker issue on blog list

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -303,7 +303,7 @@ nav {
         }
         @media only screen and (min-width: 1200px) {
             .aboutimg {
-                width: 600px;
+                width: 440px;
             }
     }
     h1 {
@@ -354,9 +354,8 @@ nav {
     flex-direction: column;
     background-color: #1f1f24;
     width: 85%;
-    border-radius: 5px;
     font-family: quickLight;
-    padding: 25px;
+    padding: 30px;
     margin: 20px auto;
     max-width: 450px;
     
@@ -459,7 +458,6 @@ nav {
             padding: 20px;
             margin: 10px 0;
             background-color: #1f1f24;
-            border-radius: 5px;
             align-items: center;
             width: 100%;
             -webkit-transform: translate3D(0, 0, 0);
@@ -769,6 +767,7 @@ h1 {
           .col {
             margin: 25px 25px 20px 25px;
             position: relative;
+            -webkit-backface-visibility: hidden;
           }
           
         article {
@@ -784,6 +783,7 @@ h1 {
                 border-radius: 5px;
                 width: 100%;
                 height: auto;
+                transition: 0.1s ease;
 
             }
             h2{
